SocketCAN: Compile with Kernels without CAN FD BRS/ESI

[ChangeLog][SocketCAN] Fixed compiling the SocketCAN plugin
with older Kernels without support for CAN FD bitrate switch
and error state indicator.

Task-number: QTBUG-64406
Change-Id: I05a7869b7df64ae6c3c29aa69dbf423d886b610a
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>